@@ -180,10 +180,13 @@ MessageWindowToolbar.Delete.ToolTip=Delete Message
 MessageWindowToolbar.Copy.ToolTip=Copy
 MessageWindowToolbar.SelectAll.ToolTip=Select All
 MessageWindowToolbar.Print.ToolTip=Print this Message
+MessageWindowToolbar.Spam.ToolTip=Spam
 MessageWindowToolbar.SaveAddress.ToolTip=Add to Address Book
 MessageWindowToolbar.Detach.ToolTip=Attach/Detach Window
 MessageWindowToolbar.Print.ToolTip=Print this Message
 MessageWindowToolbar.Find.ToolTip=Find in Page
+MessageWindowToolbar.DisplayStyle.ToolTip=Text/Html
+MessageWindowToolbar.HeaderStyle.ToolTip=Headers
 
 # popup menus
 
@@ -626,6 +629,11 @@ PrintDisplay.status.paginating=Paginating
 PrintDisplay.status.printing=Printing
 PrintDisplay.page=Page
 PrintDisplay.of=of
+PrintDisplay.message.failed=Failed
+PrintDisplay.message.canceled=Canceled
+PrintDisplay.message.needsAttention=Needs Attention
+PrintDisplay.message.errorCanceling=Error canceling job:  
+
 
 NewAccountPooka.introMessage=Welcome to Pooka.\nIt seems that you don't yet have an Email account configured.\n\nWould you like to configure one now?
 NewAccountPooka.introMessage.title=New Account Pooka
