@@ -7,16 +7,14 @@
 
 -----
 
-*) preview:  fix bug where font reverts for a moment when autopreview is
-	off.
-*) preview:  fix bug where default theme for preview mode is null if
-	messageproxy is null.
+*) preview:  bug:  open folder.  switch to preview mode.  switch to 
+	don't-auto-preview mode.  hit return.  both shows message in 
+	preview pane _and_ opens message window.
+
+*) bug:  html text is always black, no matter the theme or the 
+specifications in the html itself.
 
 *) give spam buttom a keybinding.  
-
-*) printing
-	*) handle cancel better
-	*) better layout of printer frame.  center things?
 
 *) bug?? - chance when running in cached mode of having a difference in the
 	message count?  looks like the messages are correct in the count,
@@ -171,6 +169,10 @@ say, like reacting to a mailto: link.
 *) add mrpostman support(?)
 
 *) printing in windows can leave control characters at the end of lines
+	-- test.
+*) printing
+	*) better layout of printer frame.  center things?
+
 
 *) make it so folder windows save their settings (column width, sort order)
 
@@ -516,8 +518,6 @@ entered through a propertyEditor.
 
 *) make the scrolling work properly for all border cases, such as a single new
 window at -5, -5.
-
-*) make printing nicer--it's pretty basic now.
 
 *) add interfaces for all the rest of the features.  :)
 
