@@ -1,3 +1,7 @@
+fixed a minor bug in which clearing a preview-pane mode message with a 
+custom theme would result in the message flashing for a moment with a 
+default font.
+
 made it so selecting or scrolling in a messagepanel will remove the
 new message icon.
 
